parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    CATCH
    CHAR
    CLASS
    COMMENT
    COMPLEMENTO
    CONST
    DEDENT
    DEFAULT
    DIVISAO_IGUAL
    DO
    ENUM
    EQUALS
    FOREACH
    GOTO
    IDENT
    IGUALDADE
    IN
    INTERFACE
    IS
    LAND_IGUAL
    LINHA
    LONG
    LSHIFT
    MAIS_IGUAL
    MENOS_IGUAL
    NAMESPACE
    NEGACAO
    NEW
    NOTNULL
    NULL
    OBJECT
    OUT
    OVERRIDE
    PARAMS
    PONTO
    PRIVATE
    PROTECTED
    READONLY
    REF
    RESTO
    RSHIFT
    SHORTE
    SIZEOF
    SOBRA_IGUAL
    STRUCT
    SWITCH
    TERNARIO
    THIS
    THROW
    TRY
    TYPEOF
    UINT
    ULONG
    USAFE
    USHORT
    VEZES_IGUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdecl
Rule 2     program -> funcdecl program
Rule 3     program -> variable program
Rule 4     program -> variable
Rule 5     funcdecl -> signature body
Rule 6     modifier -> PUBLIC
Rule 7     modifier -> STATIC
Rule 8     signature -> modifier ID LPAREN sigparams RPAREN
Rule 9     signature -> modifier ID LPAREN RPAREN
Rule 10    signature -> modifier type ID LPAREN sigparams RPAREN
Rule 11    signature -> modifier type ID LPAREN RPAREN
Rule 12    sigparams -> ID ID
Rule 13    sigparams -> ID ID COMMA sigparams
Rule 14    body -> LCHAV stms RCHAV
Rule 15    body -> LCHAV RCHAV
Rule 16    stms -> stm
Rule 17    stms -> stm stms
Rule 18    stm -> exp1 PV
Rule 19    stm -> WHILE LPAREN exp1 RPAREN body
Rule 20    stm -> RETURN exp1 PV
Rule 21    stm -> IF LPAREN exp1 RPAREN body ELSE body
Rule 22    stm -> IF LPAREN exp1 RPAREN body
Rule 23    stm -> variable
Rule 24    optexp -> exp1
Rule 25    optexp -> <empty>
Rule 26    stm -> FOR LPAREN optexp PV optexp PV optexp RPAREN body
Rule 27    variable -> type assign PV
Rule 28    type -> INT
Rule 29    type -> STRING
Rule 30    type -> BOOL
Rule 31    type -> FLOAT
Rule 32    type -> DECIMAL
Rule 33    type -> DOUBLE
Rule 34    type -> VOID
Rule 35    exp1 -> exp1 ATRIBUICAO exp2
Rule 36    exp1 -> exp2
Rule 37    exp2 -> exp2 LCOR exp3
Rule 38    exp2 -> exp3
Rule 39    exp3 -> exp3 LCAND exp4
Rule 40    exp3 -> exp4
Rule 41    exp4 -> exp4 OR exp5
Rule 42    exp4 -> exp5
Rule 43    exp5 -> exp5 EXOR exp6
Rule 44    exp5 -> exp6
Rule 45    exp6 -> exp6 LAND exp7
Rule 46    exp6 -> exp7
Rule 47    exp7 -> exp7 IGUAL exp8
Rule 48    exp7 -> exp7 DIFERENTE exp8
Rule 49    exp7 -> exp8
Rule 50    exp8 -> exp8 MENOR exp9
Rule 51    exp8 -> exp8 MENOR_IGUAL exp9
Rule 52    exp8 -> exp8 MAIOR exp9
Rule 53    exp8 -> exp8 MAIOR_IGUAL exp9
Rule 54    exp8 -> exp9
Rule 55    exp9 -> exp9 SOMA exp10
Rule 56    exp9 -> exp10
Rule 57    exp10 -> exp10 SUBTRACAO exp12
Rule 58    exp10 -> exp12
Rule 59    exp12 -> exp12 VEZES exp13
Rule 60    exp12 -> exp13
Rule 61    exp13 -> exp13 DIVISAO exp14
Rule 62    exp13 -> exp14
Rule 63    exp14 -> exp14 INCREMENTO
Rule 64    exp14 -> exp14 DECREMENTO
Rule 65    exp14 -> exp15
Rule 66    exp15 -> TRUE
Rule 67    exp15 -> FALSE
Rule 68    exp15 -> LITERALSTRING
Rule 69    exp15 -> ID
Rule 70    exp15 -> call
Rule 71    exp15 -> NUMBERINT
Rule 72    exp15 -> NUMBERFLOATALL
Rule 73    exp15 -> NUMBERFLOAT
Rule 74    exp15 -> NUMBERDECIMAL
Rule 75    exp15 -> NUMBERDOUBLE
Rule 76    exp15 -> LPAREN exp1 RPAREN
Rule 77    call -> ID LPAREN params RPAREN
Rule 78    call -> ID LPAREN RPAREN
Rule 79    params -> exp1 COMMA params
Rule 80    params -> exp1
Rule 81    assign -> ID IGUAL exp1
Rule 82    assign -> ID LCOL exp1 RCOL IGUAL exp1
Rule 83    assign -> ID LCOL RCOL IGUAL LCHAV params RCHAV exp1
Rule 84    assign -> ID

Terminals, with rules where they appear

ATRIBUICAO           : 35
BOOL                 : 30
BREAK                : 
CASE                 : 
CATCH                : 
CHAR                 : 
CLASS                : 
COMMA                : 13 79
COMMENT              : 
COMPLEMENTO          : 
CONST                : 
DECIMAL              : 32
DECREMENTO           : 64
DEDENT               : 
DEFAULT              : 
DIFERENTE            : 48
DIVISAO              : 61
DIVISAO_IGUAL        : 
DO                   : 
DOUBLE               : 33
ELSE                 : 21
ENUM                 : 
EQUALS               : 
EXOR                 : 43
FALSE                : 67
FLOAT                : 31
FOR                  : 26
FOREACH              : 
GOTO                 : 
ID                   : 8 9 10 11 12 12 13 13 69 77 78 81 82 83 84
IDENT                : 
IF                   : 21 22
IGUAL                : 47 81 82 83
IGUALDADE            : 
IN                   : 
INCREMENTO           : 63
INT                  : 28
INTERFACE            : 
IS                   : 
LAND                 : 45
LAND_IGUAL           : 
LCAND                : 39
LCHAV                : 14 15 83
LCOL                 : 82 83
LCOR                 : 37
LINHA                : 
LITERALSTRING        : 68
LONG                 : 
LPAREN               : 8 9 10 11 19 21 22 26 76 77 78
LSHIFT               : 
MAIOR                : 52
MAIOR_IGUAL          : 53
MAIS_IGUAL           : 
MENOR                : 50
MENOR_IGUAL          : 51
MENOS_IGUAL          : 
NAMESPACE            : 
NEGACAO              : 
NEW                  : 
NOTNULL              : 
NULL                 : 
NUMBERDECIMAL        : 74
NUMBERDOUBLE         : 75
NUMBERFLOAT          : 73
NUMBERFLOATALL       : 72
NUMBERINT            : 71
OBJECT               : 
OR                   : 41
OUT                  : 
OVERRIDE             : 
PARAMS               : 
PONTO                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 6
PV                   : 18 20 26 26 27
RCHAV                : 14 15 83
RCOL                 : 82 83
READONLY             : 
REF                  : 
RESTO                : 
RETURN               : 20
RPAREN               : 8 9 10 11 19 21 22 26 76 77 78
RSHIFT               : 
SHORTE               : 
SIZEOF               : 
SOBRA_IGUAL          : 
SOMA                 : 55
STATIC               : 7
STRING               : 29
STRUCT               : 
SUBTRACAO            : 57
SWITCH               : 
TERNARIO             : 
THIS                 : 
THROW                : 
TRUE                 : 66
TRY                  : 
TYPEOF               : 
UINT                 : 
ULONG                : 
USAFE                : 
USHORT               : 
VEZES                : 59
VEZES_IGUAL          : 
VOID                 : 34
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

assign               : 27
body                 : 5 19 21 21 22 26
call                 : 70
exp1                 : 18 19 20 21 22 24 35 76 79 80 81 82 82 83
exp10                : 55 56 57
exp12                : 57 58 59
exp13                : 59 60 61
exp14                : 61 62 63 64
exp15                : 65
exp2                 : 35 36 37
exp3                 : 37 38 39
exp4                 : 39 40 41
exp5                 : 41 42 43
exp6                 : 43 44 45
exp7                 : 45 46 47 48
exp8                 : 47 48 49 50 51 52 53
exp9                 : 50 51 52 53 54 55
funcdecl             : 1 2
modifier             : 8 9 10 11
optexp               : 26 26 26
params               : 77 79 83
program              : 2 3 0
signature            : 5
sigparams            : 8 10 13
stm                  : 16 17
stms                 : 14 17
type                 : 10 11 27
variable             : 3 4 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . variable program
    (4) program -> . variable
    (5) funcdecl -> . signature body
    (27) variable -> . type assign PV
    (8) signature -> . modifier ID LPAREN sigparams RPAREN
    (9) signature -> . modifier ID LPAREN RPAREN
    (10) signature -> . modifier type ID LPAREN sigparams RPAREN
    (11) signature -> . modifier type ID LPAREN RPAREN
    (28) type -> . INT
    (29) type -> . STRING
    (30) type -> . BOOL
    (31) type -> . FLOAT
    (32) type -> . DECIMAL
    (33) type -> . DOUBLE
    (34) type -> . VOID
    (6) modifier -> . PUBLIC
    (7) modifier -> . STATIC

    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    FLOAT           shift and go to state 10
    DECIMAL         shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    PUBLIC          shift and go to state 14
    STATIC          shift and go to state 15

    program                        shift and go to state 1
    funcdecl                       shift and go to state 2
    variable                       shift and go to state 3
    signature                      shift and go to state 4
    type                           shift and go to state 5
    modifier                       shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdecl .
    (2) program -> funcdecl . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . variable program
    (4) program -> . variable
    (5) funcdecl -> . signature body
    (27) variable -> . type assign PV
    (8) signature -> . modifier ID LPAREN sigparams RPAREN
    (9) signature -> . modifier ID LPAREN RPAREN
    (10) signature -> . modifier type ID LPAREN sigparams RPAREN
    (11) signature -> . modifier type ID LPAREN RPAREN
    (28) type -> . INT
    (29) type -> . STRING
    (30) type -> . BOOL
    (31) type -> . FLOAT
    (32) type -> . DECIMAL
    (33) type -> . DOUBLE
    (34) type -> . VOID
    (6) modifier -> . PUBLIC
    (7) modifier -> . STATIC

    $end            reduce using rule 1 (program -> funcdecl .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    FLOAT           shift and go to state 10
    DECIMAL         shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    PUBLIC          shift and go to state 14
    STATIC          shift and go to state 15

    funcdecl                       shift and go to state 2
    program                        shift and go to state 16
    variable                       shift and go to state 3
    signature                      shift and go to state 4
    type                           shift and go to state 5
    modifier                       shift and go to state 6

state 3

    (3) program -> variable . program
    (4) program -> variable .
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . variable program
    (4) program -> . variable
    (5) funcdecl -> . signature body
    (27) variable -> . type assign PV
    (8) signature -> . modifier ID LPAREN sigparams RPAREN
    (9) signature -> . modifier ID LPAREN RPAREN
    (10) signature -> . modifier type ID LPAREN sigparams RPAREN
    (11) signature -> . modifier type ID LPAREN RPAREN
    (28) type -> . INT
    (29) type -> . STRING
    (30) type -> . BOOL
    (31) type -> . FLOAT
    (32) type -> . DECIMAL
    (33) type -> . DOUBLE
    (34) type -> . VOID
    (6) modifier -> . PUBLIC
    (7) modifier -> . STATIC

    $end            reduce using rule 4 (program -> variable .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    FLOAT           shift and go to state 10
    DECIMAL         shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    PUBLIC          shift and go to state 14
    STATIC          shift and go to state 15

    variable                       shift and go to state 3
    program                        shift and go to state 17
    funcdecl                       shift and go to state 2
    signature                      shift and go to state 4
    type                           shift and go to state 5
    modifier                       shift and go to state 6

state 4

    (5) funcdecl -> signature . body
    (14) body -> . LCHAV stms RCHAV
    (15) body -> . LCHAV RCHAV

    LCHAV           shift and go to state 19

    body                           shift and go to state 18

state 5

    (27) variable -> type . assign PV
    (81) assign -> . ID IGUAL exp1
    (82) assign -> . ID LCOL exp1 RCOL IGUAL exp1
    (83) assign -> . ID LCOL RCOL IGUAL LCHAV params RCHAV exp1
    (84) assign -> . ID

    ID              shift and go to state 21

    assign                         shift and go to state 20

state 6

    (8) signature -> modifier . ID LPAREN sigparams RPAREN
    (9) signature -> modifier . ID LPAREN RPAREN
    (10) signature -> modifier . type ID LPAREN sigparams RPAREN
    (11) signature -> modifier . type ID LPAREN RPAREN
    (28) type -> . INT
    (29) type -> . STRING
    (30) type -> . BOOL
    (31) type -> . FLOAT
    (32) type -> . DECIMAL
    (33) type -> . DOUBLE
    (34) type -> . VOID

    ID              shift and go to state 22
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    FLOAT           shift and go to state 10
    DECIMAL         shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13

    type                           shift and go to state 23

state 7

    (28) type -> INT .

    ID              reduce using rule 28 (type -> INT .)


state 8

    (29) type -> STRING .

    ID              reduce using rule 29 (type -> STRING .)


state 9

    (30) type -> BOOL .

    ID              reduce using rule 30 (type -> BOOL .)


state 10

    (31) type -> FLOAT .

    ID              reduce using rule 31 (type -> FLOAT .)


state 11

    (32) type -> DECIMAL .

    ID              reduce using rule 32 (type -> DECIMAL .)


state 12

    (33) type -> DOUBLE .

    ID              reduce using rule 33 (type -> DOUBLE .)


state 13

    (34) type -> VOID .

    ID              reduce using rule 34 (type -> VOID .)


state 14

    (6) modifier -> PUBLIC .

    ID              reduce using rule 6 (modifier -> PUBLIC .)
    INT             reduce using rule 6 (modifier -> PUBLIC .)
    STRING          reduce using rule 6 (modifier -> PUBLIC .)
    BOOL            reduce using rule 6 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 6 (modifier -> PUBLIC .)
    DECIMAL         reduce using rule 6 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 6 (modifier -> PUBLIC .)
    VOID            reduce using rule 6 (modifier -> PUBLIC .)


state 15

    (7) modifier -> STATIC .

    ID              reduce using rule 7 (modifier -> STATIC .)
    INT             reduce using rule 7 (modifier -> STATIC .)
    STRING          reduce using rule 7 (modifier -> STATIC .)
    BOOL            reduce using rule 7 (modifier -> STATIC .)
    FLOAT           reduce using rule 7 (modifier -> STATIC .)
    DECIMAL         reduce using rule 7 (modifier -> STATIC .)
    DOUBLE          reduce using rule 7 (modifier -> STATIC .)
    VOID            reduce using rule 7 (modifier -> STATIC .)


state 16

    (2) program -> funcdecl program .

    $end            reduce using rule 2 (program -> funcdecl program .)


state 17

    (3) program -> variable program .

    $end            reduce using rule 3 (program -> variable program .)


state 18

    (5) funcdecl -> signature body .

    INT             reduce using rule 5 (funcdecl -> signature body .)
    STRING          reduce using rule 5 (funcdecl -> signature body .)
    BOOL            reduce using rule 5 (funcdecl -> signature body .)
    FLOAT           reduce using rule 5 (funcdecl -> signature body .)
    DECIMAL         reduce using rule 5 (funcdecl -> signature body .)
    DOUBLE          reduce using rule 5 (funcdecl -> signature body .)
    VOID            reduce using rule 5 (funcdecl -> signature body .)
    PUBLIC          reduce using rule 5 (funcdecl -> signature body .)
    STATIC          reduce using rule 5 (funcdecl -> signature body .)
    $end            reduce using rule 5 (funcdecl -> signature body .)


state 19

    (14) body -> LCHAV . stms RCHAV
    (15) body -> LCHAV . RCHAV
    (16) stms -> . stm
    (17) stms -> . stm stms
    (18) stm -> . exp1 PV
    (19) stm -> . WHILE LPAREN exp1 RPAREN body
    (20) stm -> . RETURN exp1 PV
    (21) stm -> . IF LPAREN exp1 RPAREN body ELSE body
    (22) stm -> . IF LPAREN exp1 RPAREN body
    (23) stm -> . variable
    (26) stm -> . FOR LPAREN optexp PV optexp PV optexp RPAREN body
    (35) exp1 -> . exp1 ATRIBUICAO exp2
    (36) exp1 -> . exp2
    (27) variable -> . type assign PV
    (37) exp2 -> . exp2 LCOR exp3
    (38) exp2 -> . exp3
    (28) type -> . INT
    (29) type -> . STRING
    (30) type -> . BOOL
    (31) type -> . FLOAT
    (32) type -> . DECIMAL
    (33) type -> . DOUBLE
    (34) type -> . VOID
    (39) exp3 -> . exp3 LCAND exp4
    (40) exp3 -> . exp4
    (41) exp4 -> . exp4 OR exp5
    (42) exp4 -> . exp5
    (43) exp5 -> . exp5 EXOR exp6
    (44) exp5 -> . exp6
    (45) exp6 -> . exp6 LAND exp7
    (46) exp6 -> . exp7
    (47) exp7 -> . exp7 IGUAL exp8
    (48) exp7 -> . exp7 DIFERENTE exp8
    (49) exp7 -> . exp8
    (50) exp8 -> . exp8 MENOR exp9
    (51) exp8 -> . exp8 MENOR_IGUAL exp9
    (52) exp8 -> . exp8 MAIOR exp9
    (53) exp8 -> . exp8 MAIOR_IGUAL exp9
    (54) exp8 -> . exp9
    (55) exp9 -> . exp9 SOMA exp10
    (56) exp9 -> . exp10
    (57) exp10 -> . exp10 SUBTRACAO exp12
    (58) exp10 -> . exp12
    (59) exp12 -> . exp12 VEZES exp13
    (60) exp12 -> . exp13
    (61) exp13 -> . exp13 DIVISAO exp14
    (62) exp13 -> . exp14
    (63) exp14 -> . exp14 INCREMENTO
    (64) exp14 -> . exp14 DECREMENTO
    (65) exp14 -> . exp15
    (66) exp15 -> . TRUE
    (67) exp15 -> . FALSE
    (68) exp15 -> . LITERALSTRING
    (69) exp15 -> . ID
    (70) exp15 -> . call
    (71) exp15 -> . NUMBERINT
    (72) exp15 -> . NUMBERFLOATALL
    (73) exp15 -> . NUMBERFLOAT
    (74) exp15 -> . NUMBERDECIMAL
    (75) exp15 -> . NUMBERDOUBLE
    (76) exp15 -> . LPAREN exp1 RPAREN
    (77) call -> . ID LPAREN params RPAREN
    (78) call -> . ID LPAREN RPAREN

    RCHAV           shift and go to state 25
    WHILE           shift and go to state 28
    RETURN          shift and go to state 30
    IF              shift and go to state 31
    FOR             shift and go to state 33
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    FLOAT           shift and go to state 10
    DECIMAL         shift and go to state 11
    DOUBLE          shift and go to state 12
    VOID            shift and go to state 13
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    LITERALSTRING   shift and go to state 49
    ID              shift and go to state 50
    NUMBERINT       shift and go to state 52
    NUMBERFLOATALL  shift and go to state 53
    NUMBERFLOAT     shift and go to state 54
    NUMBERDECIMAL   shift and go to state 55
    NUMBERDOUBLE    shift and go to state 56
    LPAREN          shift and go to state 29

    stms                           shift and go to state 24
    stm                            shift and go to state 26
    exp1                           shift and go to state 27
    variable                       shift and go to state 32
    exp2                           shift and go to state 34
    type                           shift and go to state 5
    exp3                           shift and go to state 35
    exp4                           shift and go to state 36
    exp5                           shift and go to state 37
    exp6                           shift and go to state 38
    exp7                           shift and go to state 39
    exp8                           shift and go to state 40
    exp9                           shift and go to state 41
    exp10                          shift and go to state 42
    exp12                          shift and go to state 43
    exp13                          shift and go to state 44
    exp14                          shift and go to state 45
    exp15                          shift and go to state 46
    call                           shift and go to state 51

state 20

    (27) variable -> type assign . PV

    PV              shift and go to state 57


state 21

    (81) assign -> ID . IGUAL exp1
    (82) assign -> ID . LCOL exp1 RCOL IGUAL exp1
    (83) assign -> ID . LCOL RCOL IGUAL LCHAV params RCHAV exp1
    (84) assign -> ID .

    IGUAL           shift and go to state 58
    LCOL            shift and go to state 59
    PV              reduce using rule 84 (assign -> ID .)


state 22

    (8) signature -> modifier ID . LPAREN sigparams RPAREN
    (9) signature -> modifier ID . LPAREN RPAREN

    LPAREN          shift and go to state 60


state 23

    (10) signature -> modifier type . ID LPAREN sigparams RPAREN
    (11) signature -> modifier type . ID LPAREN RPAREN

    ID              shift and go to state 61


state 24

    (14) body -> LCHAV stms . RCHAV

    RCHAV           shift and go to state 62


state 25

    (15) body -> LCHAV RCHAV .

    INT             reduce using rule 15 (body -> LCHAV RCHAV .)
    STRING          reduce using rule 15 (body -> LCHAV RCHAV .)
    BOOL            reduce using rule 15 (body -> LCHAV RCHAV .)
    FLOAT           reduce using rule 15 (body -> LCHAV RCHAV .)
    DECIMAL         reduce using rule 15 (body -> LCHAV RCHAV .)
    DOUBLE          reduce using rule 15 (body -> LCHAV RCHAV .)
    VOID            reduce using rule 15 (body -> LCHAV RCHAV .)
    PUBLIC          reduce using rule 15 (body -> LCHAV RCHAV .)
    STATIC          reduce using rule 15 (body -> LCHAV RCHAV .)
    $end            reduce using rule 15 (body -> LCHAV RCHAV .)
    WHILE           reduce using rule 15 (body -> LCHAV RCHAV .)
    RETURN          reduce using rule 15 (body -> LCHAV RCHAV .)
    IF              reduce using rule 15 (body -> LCHAV RCHAV .)
    FOR             reduce using rule 15 (body -> LCHAV RCHAV .)
    TRUE            reduce using rule 15 (body -> LCHAV RCHAV .)
    FALSE           reduce using rule 15 (body -> LCHAV RCHAV .)
    LITERALSTRING   reduce using rule 15 (body -> LCHAV RCHAV .)
    ID              reduce using rule 15 (body -> LCHAV RCHAV .)
    NUMBERINT       reduce using rule 15 (body -> LCHAV RCHAV .)
    NUMBERFLOATALL  reduce using rule 15 (body -> LCHAV RCHAV .)
    NUMBERFLOAT     reduce using rule 15 (body -> LCHAV RCHAV .)
    NUMBERDECIMAL   reduce using rule 15 (body -> LCHAV RCHAV .)
    NUMBERDOUBLE    reduce using rule 15 (body -> LCHAV RCHAV .)
    LPAREN          reduce using rule 15 (body -> LCHAV RCHAV .)
    RCHAV           reduce using rule 15 (body -> LCHAV RCHAV .)
    ELSE            reduce using rule 15 (body -> LCHAV RCHAV .)


state 26

    (16) stms -> stm .
    (17) stms -> stm . stms
    (16) stms -> . stm
    (17) stms -> . stm stms
    (18) stm -> . exp1 PV
    (19) stm -> . WHILE LPAREN exp1 RPAREN body
    (20) stm -> . RETURN exp1 PV
    (21) stm -> . IF LPAREN exp1 RPAREN body ELSE body
    (22) stm -> . IF LPAREN exp1 RPAREN body
    (23) stm -> . variable
    (26) stm -> . FOR LPAREN optexp PV optexp PV optexp RPAREN body
    (35) exp1 -> . exp1 ATRIBUICAO exp2
    (36) exp1 -> . exp2
    (27) variable -> . type assign PV
    (37) exp2 -> . exp2 LCOR exp3
    (38) exp2 -> . exp3
    (28) type -> . INT
    (29) type -> . STRING
    (30) type -> . BOOL
    (31) type -> . FLOAT
    (32) type -> . DECIMAL
    (33) type -> . DOUBLE
    (34) type -> . VOID
    (39) exp3 -> . exp3 LCAND exp4
    (40) exp3 -> . exp4
    (41) exp4 -> . exp4 OR exp5
    (42) exp4 -> . exp5
    (43) exp5 -> . exp5 EXOR exp6
    (44) exp5 -> . exp6
    (45) exp6 -> . exp6 LAND exp7
    (46) exp6 -> . exp7
    (47) exp7 -> . exp7 IGUAL exp8
    (48) exp7 -> . exp7 DIFERENTE exp8
    (49) exp7 -> . exp8
    (50) exp8 -> . exp8 MENOR exp9
    (51) exp8 -> . exp8 MENOR_IGUAL exp9
    (52) exp8 -> . exp8 MAIOR exp9
    (53) exp8 -> . exp8 MAIOR_IGUAL exp9
    (54) exp8 -> . exp9
    (55) exp9 -> . exp9 SOMA exp10
    (56) exp9 -> . exp10
    (57) exp10 -> . exp10 SUBTRACAO exp12
    (58) exp10 -> . exp12
    (59) exp12 -> . exp12 VEZES exp13
    (60) exp12 -> . exp13
    (61) exp13 -> . exp13 DIVISAO exp14
    (62) exp13 -> . exp14
    (63) exp14 -> . exp14 INCREMENTO
    (64) exp14 -> . exp14 DECREMENTO
    (65) exp14 -> . exp15
    (66) exp15 -> . TRUE
    (67) exp15 -> . FALSE
    (68) exp15 -> . LITERALSTRING
    (69) exp15 -> . ID
    (70) exp15 -> . call
    (71) exp15 -> . NUMBERINT
    (72) exp15 -> . NUMBERFLOATALL
    (73) exp15 -> . NUMBERFLOAT
    (74) exp15 -> . NUMBERDECIMAL
    (75) exp15 -> . NUMBERDOUBLE
    (76) exp15 -> . LPAREN exp1 RPAREN
    (77) call -> . ID LPAREN params RPAREN
    (78) call -> . ID LPAREN RPAREN
